# Zkuiperdatawhale

./: CMakeLists.txt  README.md
course1/: CMakeLists.txt
course1/test/: axby.cpp  test1.cpp
course2/source/: tensor.cpp
course2/test/: test_create_tensor.cpp  test_fill_reshape.cpp  test_homework.cpp
course6/include/data/: tensor.hpp
course9/include/data/: tensor.hpp
learn/: CMakeLists.txt  Lmain.cpp
learn/test/: learn_std.cpp
